--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,8 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .note-footer {
